Fase 6 Base lista

--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -177,6 +177,10 @@
 
             <button class="btn btn-default  dim btn-large-dim btn-outline" type="button" data-toggle="tooltip" data-placement="bottom" title="Etapa 5"><i class="fa fa-graduation-cap" ></i></button>
 
+            <a href="{% url 'etapa-6' %}">
+            <button class="btn btn-info  dim btn-large-dim btn-outline" type="button" data-toggle="tooltip" data-placement="bottom" title="Etapa 6"><i class="fa fa-folder-open" ></i></button>
+            </a> 
+
             {% endif %}
 
         </div>
