--- a/templates/tags/empty_page.html
+++ b/templates/tags/empty_page.html
@@ -49,15 +49,21 @@
 
                  {% else %}
 
-                    Perfil en construcción
+                    {% if profesion %}
+                        {% if profesion.carrera != None %}
+                            {{profesion.carrera}}
+                        {% else %}
+                            <label>Profesión:</label> Sin Definir
+                        {% endif %}
+                    {% else %}
+                        Perfil en construcción
+                    {% endif %}
 
                  {% endif %}
 
                  <b class="caret"></b></span> </span> </a>
             <ul class="dropdown-menu animated fadeInRight m-t-xs">
-                <li><a href="">Profile</a></li>
-                <li><a href="">Contacts</a></li>
-                <li><a href="">Mailbox</a></li>
+                <li><a href="">Perfil</a></li>
                 <li class="divider"></li>
                 <li><a href="{% url 'logout' %}">Salir</a></li>
             </ul>
@@ -68,16 +74,25 @@
     </li>
 {% endblock datos_profile %}
                 {% block menu_lateral_header %}
-                <li>
-                    <a href=""><i class="fa fa-th-large"></i> <span class="nav-label">Dashboards</span> <span class="fa arrow"></span></a>
-                    <ul class="nav nav-second-level collapse">
-                        <li><a href="">Dashboard v.1</a></li>
-                        <li><a href="">Dashboard v.2</a></li>
-                        <li><a href="">Dashboard v.3</a></li>
-                        <li><a href="">Dashboard v.4</a></li>
-                        <li><a href="">Dashboard v.5 </a></li>
-                    </ul>
-                </li>
+                    {% if request.user|has_group:"Administrador" %}
+                        <li>
+                            <a href=""><i class="fa fa-th-large"></i> <span class="nav-label">Opciones</span> <span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level collapse">
+                                <li><a href="">Dashboard v.1</a></li>
+                                <li><a href="">Dashboard v.2</a></li>
+                                <li><a href="">Dashboard v.3</a></li>
+                                <li><a href="">Dashboard v.4</a></li>
+                                <li><a href="">Dashboard v.5 </a></li>
+                            </ul>
+                        </li>
+                    {% elif request.user|has_group:"Empleado" %}
+                        <li>
+                            <a href=""><i class="fa fa-th-large"></i> <span class="nav-label">Opciones</span> <span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level collapse">
+                                <li><a href="">Perfil</a></li>
+                            </ul>
+                        </li>
+                    {% endif %}
                 {% endblock menu_lateral_header %}
             </ul>
         </div>
