Fase 6 lista, solo falta definir el profile

--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -181,16 +181,16 @@
             <button class="btn btn-default  dim btn-large-dim btn-outline animated fadeInDown" type="button" data-toggle="tooltip" data-placement="top"  title="Etapa 2, COMPLETADA"><i class="fa fa-address-book" ></i></button>
 
 
-            <button class="btn btn-default  dim btn-large-dim btn-outline text-center animated fadeInRight" type="button" data-toggle="tooltip" data-placement="top"  title="Etapa 3, COMPLETADA"><i class="fa fa-address-card-o" ></i></button>
+            <button class="btn btn-default  dim btn-large-dim btn-outline text-center animated fadeInRight" type="button" data-toggle="tooltip" data-placement="right"  title="Etapa 3, COMPLETADA"><i class="fa fa-address-card-o" ></i></button>
 
             </div>
             <div class="row">
 
-            <button class="btn btn-default  dim btn-large-dim btn-outline text-center animated fadeInLeft" type="button" data-toggle="tooltip" data-placement="right" title="Etapa 4, COMPLETADA"><i class="fa fa-group" ></i></button>
+            <button class="btn btn-default  dim btn-large-dim btn-outline text-center animated fadeInLeft" type="button" data-toggle="tooltip" data-placement="left" title="Etapa 4, COMPLETADA"><i class="fa fa-group" ></i></button>
 
             <button class="btn btn-default  dim btn-large-dim btn-outline text-center animated fadeInUp" type="button" data-toggle="tooltip" data-placement="bottom" title="Etapa 5 - COMPLETADA"><i class="fa fa-graduation-cap" ></i></button>
 
-            <button class="btn btn-default  dim btn-large-dim btn-outline text-center animated fadeInRight" type="button" data-toggle="tooltip" data-placement="bottom" title="Etapa 6 - COMPLETADA"><i class="fa fa-folder-open" ></i></button>
+            <button class="btn btn-default  dim btn-large-dim btn-outline text-center animated fadeInRight" type="button" data-toggle="tooltip" data-placement="right" title="Etapa 6 - COMPLETADA"><i class="fa fa-folder-open" ></i></button>
 
             </div>
             <div class = "row">
